fixed job buttons so they don't grow on mobile

--- a/styles.css
+++ b/styles.css
@@ -108,17 +108,14 @@ opacity: 100%;
     text-shadow: 0px 0px 4px rgba(255, 255, 255, 1);
 }
 
-.lightup-button:hover {
-    transition: transform 0.3s ease-out;
-    transform: scale(1.04); /* Adjust the scale factor as needed */
-    /* border: solid 2px red;
-    margin: -2px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8); */
-}
-@media (max-width: 767px) {
+
+@media (min-width: 767px) {
     .lightup-button:hover {
-      /* Set a different height for mobile screens */
-      transform: none(1.0); /* Adjust the height as needed */
+        transition: transform 0.3s ease-out;
+        transform: scale(1.04); /* Adjust the scale factor as needed */
+        /* border: solid 2px red;
+        margin: -2px;
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8); */
     }
 }
 
